# nlp-ninja

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yaml
src/: text-processing.ipynb
