[project]
name = "nlp-ninja"
version = "0.1.0"
description = "A hands-on repository for practicing Natural Language Processing techniques. Explore tokenization, embeddings, text classification, and more through practical examples and experiments."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "nltk>=3.9.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "spacy>=3.8.7",
]
